# rpi-audio-guest-book

./: .gitignore  .pre-commit-config.yaml  Dockerfile.template  README.md  asound.conf  balena.yml  docker-compose.yml  go.mod  go.sum  main.go  main.py  pyproject.toml  start.sh
pkg/config/: config.go
pkg/input_listener/: gpiodarwin.go  gpiolinux.go  inputlistener.go  keyboard.go
pkg/player/: mplayer.go  player.go
pkg/recorder/: ffmpeg.go  recorder.go
pkg/telephone/: telephone.go
supervisor/: Dockerfile.template  recover.sh
wifi-connect/: Dockerfile.template  start.sh
